--- a/chatPDF/templates/login.html
+++ b/chatPDF/templates/login.html
@@ -6,7 +6,7 @@
     </a>
     <div class="text-center">
       <img class="mb-4" style="width: 200px; height: auto"
-        src="https://ctsv.phenikaa-uni.edu.vn/assets/logo_phenikaa.fbe85f61.png" />
+        src="../static/images/Logo-DH-Phenikaa-H-VN.webp" />
     </div>
     <h1 class="text-center h4">ĐĂNG NHẬP TÀI KHOẢN</h1>
     <div class="form-group">
